[gd_scene load_steps=7 format=3 uid="uid://bkae7mayp0h3a"]

[ext_resource type="Script" path="res://Scripts/inimigo.gd" id="1_o7qfg"]
[ext_resource type="Texture2D" uid="uid://6c6wbebltlpp" path="res://icon.svg" id="1_pvuxu"]

[sub_resource type="Gradient" id="Gradient_gd8c1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fegat"]
gradient = SubResource("Gradient_gd8c1")

[sub_resource type="Gradient" id="Gradient_rjud4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.301961, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4fdth"]
gradient = SubResource("Gradient_rjud4")

[node name="Inimigo" type="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(150, 200)
script = ExtResource("1_o7qfg")

[node name="OrganizadorInterface" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BarraVida" type="TextureProgressBar" parent="OrganizadorInterface"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_fegat")
texture_progress = SubResource("GradientTexture1D_4fdth")

[node name="EtiquetaVida" type="Label" parent="OrganizadorInterface/BarraVida"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "0/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="backgroundNome" type="Panel" parent="OrganizadorInterface"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="EtiquetaNome" type="Label" parent="OrganizadorInterface/backgroundNome"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "Godet, O grande"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImagemInimigo" type="TextureRect" parent="OrganizadorInterface"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("1_pvuxu")
expand_mode = 1

[node name="respawn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="respawn" to="." method="_on_respawn_timeout"]
